@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}:
 
 {{$NEXT}}
+  [Enhancements]
+  - Added .bkp, .backup, .npb, .old, .psb and .psc to the misc_extensions rule.
 
 v0.7.0    2022-06-13 16:46:40+01:00 Europe/London
   [Enhancements]
